[DMG-403] Delete thirdparty repositories from Nexus

--- a/cookbooks/cicd_infrastructure/templates/default/jenkins/maven-global-settings-files.xml.erb
+++ b/cookbooks/cicd_infrastructure/templates/default/jenkins/maven-global-settings-files.xml.erb
@@ -71,6 +71,8 @@ under the License.
   &lt;interactiveMode&gt;true&lt;/interactiveMode&gt;
   --&gt;
 
+    &lt;interactiveMode&gt;false&lt;/interactiveMode&gt;
+
   &lt;!-- offline
    | Determines whether maven should attempt to connect to the network when executing a build.
    | This will have an effect on artifact downloads, artifact deployment, and others.
