--- a/cookbooks/cicd_infrastructure/templates/default/integration/jenkins/jobs/asf-demo-jobs.groovy.erb
+++ b/cookbooks/cicd_infrastructure/templates/default/integration/jenkins/jobs/asf-demo-jobs.groovy.erb
@@ -320,7 +320,7 @@ job(type: Maven) {
   }
 
   rootPOM("spring-petclinic-test/pom.xml")
-  goals('-P functional-test clean verify -Dpetclinic.version=${buildVersion}')
+  goals('-P functional-test,build clean verify -Dpetclinic.version=${buildVersion}')
   mavenInstallation(maven_installation)
   localRepository(LocalToWorkspace)
   configure { project ->
@@ -387,7 +387,7 @@ job(type: Maven) {
   }
 
   rootPOM("spring-petclinic-test/pom.xml")
-  goals('-P functional-test clean verify -Dpetclinic.version=${buildVersion}')
+  goals('-P functional-test,build clean verify -Dpetclinic.version=${buildVersion}')
   mavenInstallation(maven_installation)
   localRepository(LocalToWorkspace)
   configure { project ->
