--- a/cookbooks/cicd_infrastructure/templates/default/integration/jenkins/jobs/asf-demo-jobs.groovy.erb
+++ b/cookbooks/cicd_infrastructure/templates/default/integration/jenkins/jobs/asf-demo-jobs.groovy.erb
@@ -87,6 +87,11 @@ job(type: Maven) {
     project / publishers << "hudson.plugins.jira.JiraIssueUpdater"(plugin:"jira@<%= @plugins['jira'] %>")
   }
   perModuleEmail(false)
+  postBuildSteps {
+    publishers{
+        archiveJunit("spring-petclinic/target/surefire-reports/*.xml",false,false,false)
+    }
+  }
 }
 
 job(type: Maven) {
@@ -140,6 +145,9 @@ job(type: Maven) {
         currentBuild()
         propertiesFile('version.properties')
       }
+    }
+    publishers{
+        archiveJunit("spring-petclinic/target/surefire-reports/*.xml",false,false,false)
     }
   }
   configure { project ->
@@ -295,6 +303,9 @@ job(type: Maven) {
         propertiesFile('version.properties')
       }
     }
+    publishers{
+        archiveJunit("spring-petclinic/target/surefire-reports/*.xml",false,false,false)
+    }
   }
   configure { project ->
     project / publishers << "hudson.plugins.jira.JiraIssueUpdater"(plugin:"jira@<%= @plugins['jira'] %>")
@@ -330,6 +341,11 @@ job(type: Maven) {
         settingsConfigId('<%= @settings_id %>')
       }
   }
+  postBuildSteps {
+    publishers{
+        publishHtml{report("spring-petclinic-test/target/jbehave/view","HTML Report",'index.html',false)}
+    }
+  }
   configure { project ->
     project / publishers << "hudson.plugins.jira.JiraIssueUpdater"(plugin:"jira@<%= @plugins['jira'] %>")
   }
@@ -363,6 +379,12 @@ job(type: Maven) {
           settingsConfigId('<%= @settings_id %>')
         }
   }
+  postBuildSteps {
+    publishers{
+        publishHtml{report("spring-petclinic-test/target/jbehave/view","HTML Report",'index.html',false)}
+    }
+  }
+
   configure { project ->
     project / publishers << "hudson.plugins.jira.JiraIssueUpdater"(plugin:"jira@<%= @plugins['jira'] %>")
   }
@@ -403,6 +425,9 @@ job(type: Maven) {
         currentBuild()
         predefinedProp("buildCommit", '${buildCommit}')
       }
+    }
+    publishers{
+        publishHtml{report("spring-petclinic-test/target/jbehave/view","HTML Report",'index.html',false)}
     }
   }
   configure { project ->
