Fix jenkins user group in Gerrit and deploy job parameters

--- a/cookbooks/cicd_infrastructure/templates/default/integration/jenkins/jobs/asf-demo-jobs.groovy.erb
+++ b/cookbooks/cicd_infrastructure/templates/default/integration/jenkins/jobs/asf-demo-jobs.groovy.erb
@@ -423,6 +423,7 @@ job(type: Maven) {
     downstreamParameterized {
       trigger('deploy-integration-tests') {
         predefinedProp("buildCommit", '${buildCommit}')
+	predefinedProp("buildVersion", '${buildVersion}')
       }
     }
     publishers{
