[DMG-408] Make Code-Review label sticky on trivial changes

--- a/cookbooks/cicd_infrastructure/templates/default/gerrit/project.config.erb
+++ b/cookbooks/cicd_infrastructure/templates/default/gerrit/project.config.erb
@@ -64,6 +64,8 @@
 [label "Code-Review"]
     function = MaxWithBlock
     copyMinScore = true
+    copyAllScoresOnTrivialRebase = true
+    copyAllScoresIfNoCodeChange = true
     value = -2 Do not submit
     value = -1 I would prefer that you didn't submit this
     value = 0 No score
