--- a/cookbooks/cicd_infrastructure/templates/default/jenkins/jbehave_profile_settings.xml.erb
+++ b/cookbooks/cicd_infrastructure/templates/default/jenkins/jbehave_profile_settings.xml.erb
@@ -11,6 +11,7 @@
                     &lt;/releases&gt;
                     &lt;snapshots&gt;
                         &lt;enabled&gt;true&lt;/enabled&gt;
+			&lt;checksumPolicy&gt;fail&lt;/checksumPolicy&gt;
                     &lt;/snapshots&gt;
                 &lt;/repository&gt;
             &lt;/repositories&gt;
@@ -24,6 +25,7 @@
                     &lt;/releases&gt;
                     &lt;snapshots&gt;
                         &lt;enabled&gt;true&lt;/enabled&gt;
+			&lt;checksumPolicy&gt;fail&lt;/checksumPolicy&gt;
                     &lt;/snapshots&gt;
                 &lt;/pluginRepository&gt;
             &lt;/pluginRepositories&gt;
